MAJOR: add pairwise.py and tests

--- a/instructions_api.ipynb
+++ b/instructions_api.ipynb
@@ -4,33 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# tcrdist2 api instructions"
+    "# Instructions for tcrdist2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2019-06-17 "
+    "2019-06-19 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## recommended installation method"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Recommended Installation Method\n",
+    "\n",
+    "tcrdist2 can be installed like any other python package:\n",
+    "\n",
+    "```bash\n",
+    "pip install git+https://github.com/kmayerb/tcrdist2.git@API2\n",
     "```\n",
+    "\n",
+    "however, it is highly recommended that you run **tcrdist2**\n",
+    "within a [python virtual environment](https://packaging.python.org/guides/installing-using-pip-and-virtual-environments/). Using a virtual env isolates the program's dependencies so that installing legacy packages for \n",
+    "python (2.7.11) -- numpy (1.10.1), scipy (0.16.0), scikit-learn (0.17.1), and matplotlib (1.4.3) --\n",
+    "does not interfere with any of your other ongoing python projects. Setting up a virtual env takes less than\n",
+    "5 minutes using the commands below. To configure your machine to run **tcrdist2** using the correct dependencies,use the [*requirements.txt*](https://github.com/kmayerb/tcrdist2/blob/API2/requirements.txt)\n",
+    "file provided in the tcrdist2 github repository. We assume that you have a working version of condas installed or know how to install python 2.7.11. \n",
+    "\n",
+    "```bash\n",
+    "conda create -n py27v python=2.7.11 pip virtualenv\n",
+    "conda activate py27v\n",
     "virtualenv venv\n",
+    "conda deactivate\n",
+    "conda deactivate\n",
     "source ./venv/bin/activate\n",
     "pip install -r requirements.txt\n",
     "pip install git+https://github.com/kmayerb/tcrdist2.git@API2\n",
-    "```"
+    "```\n",
+    "\n",
+    "- Using condas, install a base python interpretor (Python version 2.7.11) with pip and virtualenv. \n",
+    "- Activate it: **conda activate py27v**\n",
+    "- Make a virtual env that will contain all of tcrdists dependencies: **virtualenv venv**\n",
+    "- Deactivate condas env (twice to deactivate py27v and base) : **conda deactivate**\n",
+    "- Source venv : **source ./venv/bin/activate.**\n",
+    "- pip install all tcrdists dependencies **pip install -r requirements.txt**\n",
+    "- pip install tcrdist2\n",
+    "- OPTIONAL: Install Blast Tools (see section below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Usage"
    ]
   },
   {
@@ -52,30 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "betaNT = 'CGGGGGGGGTACCNTTGNTTAGGTCCTCTACACGGTTAACCTGGTCCCCGAACCGAAGGTCAATAGGGCCTGTATACTGCTGGCACAGAAGTACACAGCTGAGTCCCTGGGTTCTGAGGGCTGGATCTTCAGAGTGGAGTCANN'\n",
-    "betaQuals = '12.12.12.12.12.22.9.8.6.6.6.8.3.0.3.10.3.0.3.10.10.11.20.25.30.37.37.29.27.14.14.15.27.30.41.47.36.50.50.50.42.42.57.57.43.47.53.47.47.47.47.47.47.50.54.57.57.57.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.57.57.57.57.59.59.59.57.57.57.57.57.57.57.57.59.57.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.59.59.59.59.59.57.57.57.59.57.57.43.37.28.28.21.28.23.37.28.30.15.19.17.15.21.20.25.3.0.0'"
+    "betaQuals = '12.12.12.12.12.22.9.8.6.6.6.8.3.0.3.10.3.0.3.10.10.11.20.25.30.37.37.29.27.14.14.15.27.30.41.47.36.50.50.50.42.42.57.57.43.47.53.47.47.47.47.47.47.50.54.57.57.57.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.57.57.57.57.59.59.59.57.57.57.57.57.57.57.57.59.57.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.68.59.59.59.59.59.57.57.57.59.57.57.43.37.28.28.21.28.23.37.28.30.15.19.17.15.21.20.25.3.0.0'\n",
+    "chain = td.processing.processNT(organism = 'human', chain = 'B', nuc = betaNT, quals = betaQuals, use_parasail = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain = td.processing.processNT(organism = 'human', \n",
-    "                                chain = 'B',\n",
-    "                                nuc = betaNT, \n",
-    "                                quals = betaQuals, \n",
-    "                                use_parasail = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +232,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -787,13 +803,181 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "psDf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cdr3a</th>\n",
+       "      <th>cdr3b</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CAGPRETSYDKVIF</td>\n",
+       "      <td>CASSSAYYGYTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CAETRSRDYKLSF</td>\n",
+       "      <td>CASSQEEGPGNQPQHF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CAGQASQGNLIF</td>\n",
+       "      <td>CASSIQALLTF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CAVADTGNQFYF</td>\n",
+       "      <td>CATAITSTQYF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CLVGSMDSNYQLIW</td>\n",
+       "      <td>CASSSQSNQPQHF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>CAVPKGSQGNLIF</td>\n",
+       "      <td>CASSIRSSYEQYF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>CAVSDSGTGNQFYF</td>\n",
+       "      <td>CASSQMTGLNTEAFF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>CAGPFGRLMF</td>\n",
+       "      <td>CASSLFPGFGEQYF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>CAGPDGSSNTGKLIF</td>\n",
+       "      <td>CASSLIFPSGEQYF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              cdr3a             cdr3b\n",
+       "0      CAGQASQGNLIF       CASSIQALLTF\n",
+       "1      CAGQASQGNLIF       CASSIQALLTF\n",
+       "2      CAGQASQGNLIF       CASSIQALLTF\n",
+       "3    CAGPRETSYDKVIF      CASSSAYYGYTF\n",
+       "4      CAGQASQGNLIF       CASSIQALLTF\n",
+       "5      CAGQASQGNLIF       CASSIQALLTF\n",
+       "6      CAGQASQGNLIF       CASSIQALLTF\n",
+       "7     CAETRSRDYKLSF  CASSQEEGPGNQPQHF\n",
+       "8      CAGQASQGNLIF       CASSIQALLTF\n",
+       "9      CAGQASQGNLIF       CASSIQALLTF\n",
+       "10     CAGQASQGNLIF       CASSIQALLTF\n",
+       "11     CAGQASQGNLIF       CASSIQALLTF\n",
+       "12     CAGQASQGNLIF       CASSIQALLTF\n",
+       "13     CAGQASQGNLIF       CASSIQALLTF\n",
+       "14     CAVADTGNQFYF       CATAITSTQYF\n",
+       "15   CLVGSMDSNYQLIW     CASSSQSNQPQHF\n",
+       "16    CAVPKGSQGNLIF     CASSIRSSYEQYF\n",
+       "17   CAVSDSGTGNQFYF   CASSQMTGLNTEAFF\n",
+       "18       CAGPFGRLMF    CASSLFPGFGEQYF\n",
+       "19  CAGPDGSSNTGKLIF    CASSLIFPSGEQYF"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psDf[['cdr3a','cdr3b']]"
    ]
   },
   {
@@ -805,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1193,7 @@
        "4       0.090738     0.021782      0.04051  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
