edit instructions text

--- a/instructions_pairwise_comparison.ipynb
+++ b/instructions_pairwise_comparison.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "2019-06-26\n",
     "\n",
-    "This notebook contains instructions and explanations for using pairwise module inthe development version of tcrdist2. It is meant for Kosh, Phil, and Andrew rather than for an end user."
+    "This notebook contains instructions and explanations for using the pairwise module in the development version of tcrdist2. It is meant for Kosh, Phil, and Andrew rather than for an end user."
    ]
   },
   {
