Renamed seqlogo and fixed hierdiff test

--- a/important_notebooks/hierdiff_example.ipynb
+++ b/important_notebooks/hierdiff_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compare two repertoires using `tcrdist`, `hierdiff` and `seqlogo`\n",
+    "# Compare two repertoires using `tcrdist`, `hierdiff` and `palmotif`\n",
     "This example notebook demonstrates how to:\n",
     " 1. Load/parse the [Dash et al. (2017)](https://pubmed.ncbi.nlm.nih.gov/28636592/) dataset\n",
     " 2. Compute distances between all pairs of unique TCR clones\n",
@@ -26,7 +26,7 @@
     "from fg_shared import _git\n",
     "sys.path.append(opj(_git, 'hierdiff'))\n",
     "sys.path.append(opj(_git, 'tcrdist2'))\n",
-    "sys.path.append(opj(_git, 'seqlogo'))"
+    "sys.path.append(opj(_git, 'palmotif'))"
    ]
   },
   {
@@ -60,9 +60,9 @@
     "It provides statistical testing and plotting for TCR clusters\"\"\"\n",
     "import hierdiff\n",
     "\n",
-    "\"\"\"seqlogo can be installed from PyPI and provides functions for computing\n",
+    "\"\"\"palmotif can be installed from PyPI and provides functions for computing\n",
     "and displaying sequence logos as SVG\"\"\"\n",
-    "import seqlogo"
+    "import palmotif"
    ]
   },
   {
@@ -1148,9 +1148,9 @@
    ],
    "source": [
     "ind = 0\n",
-    "motif = seqlogo.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
+    "motif = palmotif.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
     "                        seqs=res.loc[res.loc[ind, 'neighbors'], 'cdr3_b_aa'])\n",
-    "html = seqlogo.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
+    "html = palmotif.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
     "HTML(data=html)"
    ]
   },
@@ -1186,10 +1186,10 @@
    ],
    "source": [
     "ind = 0\n",
-    "motif = seqlogo.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
+    "motif = palmotif.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
     "                        seqs=res.loc[res.loc[ind, 'neighbors'], 'cdr3_b_aa'],\n",
     "                         refs=res.loc[[i for i in res.index if not i in res.loc[ind, 'neighbors']], 'cdr3_b_aa'])\n",
-    "html = seqlogo.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
+    "html = palmotif.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
     "HTML(data=html)"
    ]
   },
@@ -1225,9 +1225,9 @@
    ],
    "source": [
     "ind = 250\n",
-    "motif = seqlogo.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
+    "motif = palmotif.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
     "                        seqs=res.loc[res.loc[ind, 'neighbors'], 'cdr3_b_aa'])\n",
-    "html = seqlogo.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
+    "html = palmotif.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
     "HTML(data=html)"
    ]
   },
@@ -1256,10 +1256,10 @@
    ],
    "source": [
     "ind = 250\n",
-    "motif = seqlogo.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
+    "motif = palmotif.compute_pal_motif(res.loc[ind, 'cdr3_b_aa'],\n",
     "                        seqs=res.loc[res.loc[ind, 'neighbors'], 'cdr3_b_aa'],\n",
     "                         refs=res.loc[[i for i in res.index if not i in res.loc[ind, 'neighbors']], 'cdr3_b_aa'])\n",
-    "html = seqlogo.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
+    "html = palmotif.svg_logo(motif, return_html=True, svg_height='100px', svg_width='800px')\n",
     "HTML(data=html)"
    ]
   },
